# TeleFileBot

./: .replit  Dockerfile  bot.py  bot_data.db  config.py  database.py  file_handler.py  main.py  pyproject.toml  replit.md  requirements.txt  simple_web_server.py  url_shortener.py  utils.py  web_app.py
handlers/: admin.py  file.py  url.py  user.py
session/: mraprguild_bot.session  mraprguild_bot.session-journal
static/css/: dashboard.js  style.css
static/js/: dashboard.js
templates/: base.html  dashboard.html  files.html  settings.html  urls.html  users.html
