[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
   "aiohttp>=3.12.15",
    "flask>=3.1.2",
    "nltk>=3.9.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.43",
    "telegram>=0.0.1",
    "textblob>=0.19.0",
    'pyrogram>=2.0.106'
]
